--- a/src/EmployeeAdmin.mxml
+++ b/src/EmployeeAdmin.mxml
@@ -1,37 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
- PureMVC AS3 Demo - Flex Employee Admin 
- Copyright (c) 2007-10 Clifford Hall <clifford.hall@puremvc.org>
- Your reuse is governed by the Creative Commons Attribution 3.0 License
--->
-<mx:Application xmlns:mx="http://www.adobe.com/2006/mxml" 
-	xmlns:view="org.puremvc.as3.demos.flex.employeeadmin.view.components.*"
-	layout="horizontal" horizontalAlign="center" verticalAlign="middle"
-	pageTitle="PureMVC Flex Demo: EmployeeAdmin"
-	backgroundGradientColors="[#325EC0,#FFFFFF]"
-	backgroundColor="#FFFFFF" 
-	themeColor="HaloBlue"
-	creationComplete="facade.startup(this)" viewSourceURL="srcview/index.html">
-
-	<mx:Script>
+<js:Application xmlns:fx="http://ns.adobe.com/mxml/2009"
+				xmlns:js="library://ns.apache.org/flexjs/basic" 
+				xmlns:local="*" xmlns:view="org.puremvc.as3.demos.flex.employeeadmin.view.components.*"
+				pageTitle="HelloWorld" xmlns:ns="library://ns.apache.org/flexjs/html5">
+			   
+	<fx:Declarations>
+	</fx:Declarations>
+	
+	<fx:Script>
 		<![CDATA[
 			import org.puremvc.as3.demos.flex.employeeadmin.ApplicationFacade;
+
 			private var facade:ApplicationFacade = ApplicationFacade.getInstance();
+
+			private function onInitComplete():void {
+				facade.startup(this);
+			}
 		]]>
-	</mx:Script>
+	</fx:Script>
 	
-	<mx:ApplicationControlBar verticalAlign="middle" backgroundColor="#FFFFFF" dock="true">
-		<mx:Text text="Employee Admin" fontFamily="Verdana" fontSize="22" fontStyle="normal" color="#0559CC"/>
-		<mx:Label fontWeight="bold" text="PureMVC AS3 / Flex Demo"/>
-	</mx:ApplicationControlBar>
+	<js:valuesImpl>
+		<js:SimpleCSSValuesImpl />
+	</js:valuesImpl>
 	
+	<js:initialView>
+		<js:View width="100%" height="100%" initComplete="onInitComplete()">
+			
 	<!-- User Management Interface -->
-	<mx:VBox>
+	<js:VGroup>
 		<view:UserList id="userList" width="100%" />
-		<mx:HBox>
+		<js:HGroup>
 			<view:UserForm id="userForm"/>
 			<view:RolePanel id="rolePanel" height="100%"/>
-		</mx:HBox>
-	</mx:VBox>
+		</js:HGroup>
+	</js:VGroup>
+		</js:View>
+	</js:initialView>
 	
-</mx:Application>
+ </js:Application>
