--- a/src/org/puremvc/as3/demos/flex/employeeadmin/view/components/UserForm.mxml
+++ b/src/org/puremvc/as3/demos/flex/employeeadmin/view/components/UserForm.mxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <js:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
-	xmlns:js="library://ns.apache.org/flexjs/express">
+	xmlns:js="library://ns.apache.org/flexjs/express"
+	xmlns:mdl="library://ns.apache.org/flexjs/mdl">
 
 	<fx:Script>
 		<![CDATA[
@@ -75,6 +76,12 @@
 			}
 		]]>
 	</fx:Script>
+
+	<mdl:Card width="800">
+		<mdl:CardTitle>
+            <mdl:CardTitleText text="UserForm"/>
+    	</mdl:CardTitle>
+	</mdl:Card>
 
 
 </js:Group>
